# taigi-telex

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  INSTALLATION_GUIDE.md  Package.swift  README.md  justfile  mise.toml  pyproject.toml
.github/workflows/: ci.yml
cmake/: MacOSXBundleInfo.plist.in
dmg/: POJ-preference.tiff  TW-big.tiff  TW-input-menu.tiff  TW-preference.tiff  background.drawio  config.py
dmg/en.lproj/: InfoPlist.strings
fuzz/: main.swift
pkg/: LICENSE.txt  app.plist  distribution.xml.template  welcome.rtf
pkg/scripts/: postinstall
resources/: POJ-big.tiff  POJ-input-menu.tiff
scripts/: build_pkg.sh
src/: TelexEngine.swift  TelexRules.swift  TelexTypes.swift  controller.swift  server.swift
src/lib/: TelexEngine.swift  TelexRules.swift  TelexTypes.swift
test/: SyllableTestData.swift  TelexEngineEdgeCaseTests.swift  TelexEngineTests.swift  TelexRulesTests.swift
